# Newmap

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  deploy-remote.sh  deploy.sh  dev.ps1  dev.sh  package-lock.json  package.json  playwright.config.ts  pyproject.toml  ship.sh  uninstall.sh  周报20260430-林逸骏.docx  周报20260509-林逸骏.docx  周报20260515-林逸骏.docx
apps/web/: eslint.config.js  index.html  package.json  vite.config.ts
apps/web/src/: App.css  App.tsx  api.test.ts  api.ts  artifactSelection.test.ts  artifactSelection.ts  constants.ts  index.css  main.tsx  messageLedger.ts  motion.ts  providerCapabilities.ts  runTranscript.test.ts  runTranscript.ts  workspacePointer.ts
apps/worker/: Dockerfile
demo/tool-provider-demo/: AGENTS.md  README.md  package.json  tsconfig.json
demo/tool-provider-demo/src/: demoManifest.ts  demoProvider.ts  demoService.ts  index.ts
demo/tool-provider-demo/tests/: provider.test.ts
design-system/geo-agent-workspace/: MASTER.md
design-system/geo-agent-workspace/pages/: home.md
docProps/: app.xml  core.xml  custom.xml
docs/: __init__.py  agent-development-lecture-cn.html  api-contracts.md  architecture-logic.docx  architecture.md  codex_from_zero_demo_script.md  codex_from_zero_demo_speech.md  project-review-20260527.md  tool-integration-standard.md
docs/examples/: __init__.py
docs/examples/simple_tool_provider/: __init__.py  provider.py
infra/compose/: docker-compose.dev.yml  docker-compose.prod.yml
infra/docker/api/: Dockerfile
infra/docker/postgis/: README.md
infra/docker/qgis-runtime/: Dockerfile
infra/docker/qgis-server/: README.md  nginx.conf
infra/docker/web/: Dockerfile  nginx.conf
infra/docker/worker/: Dockerfile
infra/migrations/: 001_init_postgis.sql  002_add_thread_id.sql  004_file_conversation_store.sql
infra/seeds/layers/: admin_boundaries.geojson  candidate_sites.geojson  catalog.json  hangzhou_districts.geojson  hospitals.geojson  metro_stations.geojson
qgis/models/: buffer_and_intersect.model3  clip_and_export.model3  point_within_boundary.model3  site_selection_basic.model3
qgis/projects/: demo_project.qgs
qgis/published/data/: artifact_30e7e2c837af.geojson  artifact_78f0ce85691c.geojson  artifact_fa9059914a40.geojson
qgis/published/projects/: artifact_30e7e2c837af.qgs  demo-workspace.qgs  demo-workspace.qgs~  pyqgis-test.qgs  pyqgis-wfs-test.qgs
qgis/published/workspaces/: demo-workspace.json
qgis/scripts/: README.md  generate_models.py
qgis/styles/: result_default.qml
scripts/: check-meteorology-terminology.mjs  check-web-bundle-budget.mjs  generate-liquid-glass-maps.mjs  reset-conversation-store.mjs  reset_platform_data.sql
scripts/deploy/: common.sh  push-and-remote-deploy.sh  server-deploy.sh  server-install-docker.sh
server/: Dockerfile  package.json  tsconfig.json
server/scripts/: run-vitest-with-env.mjs
server/src/: app.ts  architecture.test.ts  env.ts  lifecycle.ts  main.ts  tools.ts
server/src/agent/: agentsRuntimeMetadata.ts  agentsToolBridge.test.ts  agentsToolBridge.ts  contextManager.test.ts  contextManager.ts  defaultRuntimeConfig.ts  deterministicNowcastRunner.ts  fileAgentsSession.test.ts  fileAgentsSession.ts  prompts.ts  runtime.test.ts  runtime.ts  sdkBridge.ts  toolBridge.ts  toolExecutionCoordinator.test.ts  toolExecutionCoordinator.ts  turnRunner.test.ts  turnRunner.ts
server/src/conversation/: itemSink.ts  items.ts
server/src/db/: connection.ts  schema.ts
server/src/framework/: env.ts  loader.ts  registry.test.ts  registry.ts  schema.ts  types.ts  validation.ts
server/src/gis/: crs.ts  geojson.ts  postgis.ts  seedLayers.test.ts  seedLayers.ts
server/src/memory/: constants.ts  markdown.ts  memory.test.ts  paths.ts  scan.ts  (+2 more)
tests/: conftest.py  test_agent_context_manager.py  test_agent_sdk_boundaries.py  test_agent_session_log_store.py  test_charting.py  test_default_session.py  test_intent_parser.py  test_layer_descriptor_contracts.py  test_meteorological_interpretation.py  test_meteorology_scientific_chain.py  test_nowcast_service.py  test_nowcast_tools.py  test_spatial_service_boundaries.py  test_sse_event_boundaries.py  test_tool_descriptor_contract.py  test_tool_provider_contract.py  test_tool_value_refs.py  test_tts_tool_boundary.py  test_vector_import.py  test_weather_reader_abstraction.py  test_weather_scientific_chain.py  test_weather_service.py  test_weather_tool_registration.py
tests/e2e/: workspace.spec.ts
tests/integration/: test_api_flow.py  test_tooling_api.py
tests/unit/: test_basemap_catalog.py  test_parser.py  test_publish.py  test_spatial_service.py  test_store.py  test_tool_catalog.py
word/: document.xml  fontTable.xml  settings.xml  styles.xml
word/theme/: theme1.xml
(+320 files in other folders)
