[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geo-agent-platform"
version = "0.1.0"
description = "Chinese-first GIS agent platform with FastAPI, OpenAI Agents SDK and MapLibre."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "cfgrib>=0.9.15.0",
  "contourpy>=1.3.0",
  "h5netcdf>=1.6.0",
  "h5py>=3.12.0",
  "netCDF4>=1.7.0",
  "openai-agents>=0.17.0",
  "Pillow>=11.0.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.8.0",
  "pyshp>=2.3.1",
  "pyproj>=3.7.0",
  "psycopg[binary]>=3.2.0",
  "python-docx>=1.2.0",
  "python-multipart>=0.0.9",
  "rasterio>=1.4.0",
  "shapely>=2.0.0",
  "uvicorn[standard]>=0.35.0",
  "xarray>=2025.1.0",
  "ChatTTS>=0.1.0",
  "cn2an>=0.5.0",
  "jieba>=0.42.0",
  "tenacity>=9.0.0",
  "wcmatch>=10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
  "apps/api/src",
  "apps/worker/src",
  "packages/agent-core/src",
  "packages/model-adapters/src",
  "packages/tool-registry/src",
  "packages/gis-postgis/src",
  "packages/gis-weather/src",
  "packages/gis-common/src",
  "packages/shared-types/src",
  "packages/media-tts/src",
  "packages/media-avatar/src"
]

[tool.setuptools.packages.find]
where = [
  "apps/api/src",
  "apps/worker/src",
  "packages/agent-core/src",
  "packages/model-adapters/src",
  "packages/tool-registry/src",
  "packages/gis-postgis/src",
  "packages/gis-weather/src",
  "packages/gis-common/src",
  "packages/shared-types/src",
  "packages/media-tts/src",
  "packages/media-avatar/src"
]
